# github-trending-analysis

./: .env.example  .gitignore  CHANGELOG.md  NOTICE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: github-trending.yml.disabled
plugins/github-topics/: manifest.json
scripts/: setup_ubuntu_cron.sh  setup_ubuntu_timer.sh
scripts/sql/: postgres_init.sql  postgres_schema.sql
src/: __init__.py  claude_summarizer.py  cli_app.py  config.py  database.py  email_reporter.py  github.py  readme_fetcher.py  repo_activity_fetcher.py  resend.py  retry_utils.py  trend_analyzer.py  trending_workflow.py  web_generator.py
src/analysis/: __init__.py  repository_summarizer.py  trend_analyzer.py
src/application/: __init__.py  cli_app.py  opportunity_report_builder.py
src/email/: __init__.py  sender.py
src/github/: __init__.py  clone_manager.py  fetcher.py  readme_fetcher.py  repo_activity_fetcher.py
src/infrastructure/: __init__.py  database.py  web_generator.py
src/pipeline/: __init__.py  change_scoring.py  repository_analysis.py  repository_selection.py
src/pipeline/contracts/: __init__.py  run_models.py
src/pipeline/steps/: __init__.py  repository_analysis_step.py  (+1 more)
src/retrieval/: __init__.py  chunker.py  doc_extractor.py  embedder.py  index_writer.py  retriever.py  vector_store.py
src/util/: __init__.py  model_util.py  print_util.py  retry_utils.py
src/web/: __init__.py  report_html.py
tests/: test_cli_app_helpers.py  test_config_helpers.py  test_model_util.py  test_print_util.py  test_repository_analysis.py  test_retry_utils.py  test_trend_analyzer.py  test_trending_workflow.py
tests/cli_app/: test_cli_app_helpers.py
tests/github/: test_readme_fetcher.py
tests/pipeline/: test_change_scoring.py  test_repository_analysis.py  test_repository_selection.py
tests/retrieval/: test_vector_ingestion.py
(+3 files in other folders)
