[project]
name = "github-topics-trending"
version = "0.1.0"
description = "Track GitHub topic trends with AI analysis, reports, and static pages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "openai>=2.24.0",
    "premailer>=3.10.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "resend>=2.23.0",
]
