[project]
name = "github-topics-trending"
version = "0.1.0"
description = "Track GitHub topic trends with AI analysis, reports, and static pages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.82.0",
    "premailer>=3.10.0",
    "psycopg[binary]>=3.2.9",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "resend>=2.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=35",
]
